[package]
name = "drunx"
version = "1.4.0"
authors = ["Alexandru Olaru <alxolr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
structopt = "0"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"

[profile.release]
codegen-unit = 1
