[package]
name = "drunx"
version = "1.7.0"
authors = ["Alexandru Olaru <alxolr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
structopt = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"

[profile.release]
codegen-unit = 1
